@@ -1,3 +1,9 @@
+2001-08-22  Sam Steingold  <sds@gnu.org>
+
+	* io.d (PPRINT-NEWLINE): output only to PPHELP streams
+	and when *PRINT-PRETTY* is non-NIL
+	(%PPRINT-LOGICAL-BLOCK): bind *PRIN-PPRINTER*, not set it
+
 2001-08-05  Bruno Haible  <haible@clisp.cons.org>
 
 	* io.d (check_readtable): Renamed from CHECK_READTABLE. Add
